# iroh-c-ffi

./: .gitignore  Cargo.toml  Cargo.toml-E  LICENSE-APACHE  Makefile  README.md  deny.toml  irohnet.h  main.c  multi-thread-client  multi-thread-client.c  multi-thread-server  multi-thread-server.c  single-thread-server  single-thread-server.c
.github/workflows/: ci.yml  release.yaml
src/: addr.rs  endpoint.rs  key.rs  lib.rs  magic_endpoint.rs  stream.rs  util.rs
