[package]
name = "iroh-c-ffi"
version = "0.33.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = [
  "staticlib",  # Ensure it gets compiled as a (static) C library
  "cdylib",     # If you want a shared/dynamic C library (advanced)
  "lib",        # For `generate-headers` and other downstream rust dependents
                # such as integration `tests/`, doctests, and `examples/`
]

[[bin]]
name = "generate_headers"
required-features = ["headers"]  # Do not build unless generating headers.

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
iroh = { version = "0.34", features = ["discovery-local-network"] }
iroh-base = { version = "0.34", features = ["ticket"] }
once_cell = "1.19.0"
rand = "0.8.5"
safer-ffi = { version = "0.1.5" }
socket2 = "0.5.7"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
n0-future = "0.1.2"

[features]
# generate headers
headers = ["safer-ffi/headers"]
