[package]
name = "iroh-c-ffi"
version = "0.99.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = [
  "staticlib",  # Ensure it gets compiled as a (static) C library
  "cdylib",     # If you want a shared/dynamic C library (advanced)
  "lib",        # For `generate-headers` and other downstream rust dependents
                # such as integration `tests/`, doctests, and `examples/`
]

[[bin]]
name = "generate_headers"
required-features = ["headers"]  # Do not build unless generating headers.

[dependencies]
anyhow = "1"
bytes = "1.10"
iroh = "=1.0.0-rc.1"
iroh-tickets = "=1.0.0-rc.1"
once_cell = "1.21"
rand = "0.10"
safer-ffi = { version = "0.1.13" }
socket2 = "0.6.1"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5"
n0-future = "0.3.0"
data-encoding = "2.9.0"
iroh-mdns-address-lookup = "0.3.0"

[features]
# generate headers
headers = ["safer-ffi/headers"]
